Change the title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  <meta http-equiv="Content-Language" content="fr" />
  <meta name="author" content="Marc Glisse" />
 
- <title>Titre</title>
+ <title>Change the title</title>
 
 </head>
 <body>
